@startuml ClassDiagram_01_Core
' v0.1.15 - パターン実行条件、計算パターン、内部角度管理の追加
' ステレオタイプの色設定
skinparam class {
    BackgroundColor<<MonoBehaviour>> LightBlue
    BackgroundColor<<ScriptableObject>> LightGreen
    BackgroundColor<<Interface>> LightYellow
    BackgroundColor<<enum>> LightCoral
}

' --- Interfaces ---
interface IMovable <<Interface>>
interface IShootable <<Interface->>

' --- Managers ---
class SystemManager <<MonoBehaviour>>
class DanmakuGameManager <<MonoBehaviour>>
class GameParameterManager <<MonoBehaviour>>

' --- Core Abstract Classes ---
abstract class GameEntityController <<MonoBehaviour>>
class GameEntity <<ScriptableObject>>
class GameEntityProperty <<ScriptableObject>>
abstract class PatternBase <<ScriptableObject>>
abstract class TriggerPatternBase <<ScriptableObject>>
abstract class "CalculatePatternBase<T>" as CalculatePatternBase_T <<ScriptableObject>>
abstract class EmissionShape <<ScriptableObject>>
abstract class GameParameter <<ScriptableObject>>
abstract class "GameParameterReference<T>" as GameParameterReference_T <<struct>>

' --- 継承関係 ---
IMovable <|.. GameEntityController
IShootable <|.. GameEntityController
PatternBase <|-- TriggerPatternBase
PatternBase <|-- CalculatePatternBase_T

' --- 関連 ---
GameEntityController o-- GameEntity : "_entity"
GameEntity o-- "1" GameEntityProperty : "property"
GameEntityProperty o-- PatternBase : "ShootPattern / MovePattern"
PatternBase o-- "*" GameParameter : "uses"
TriggerPatternBase o-- PatternBase : "_triggerPattern"
TriggerPatternBase ..> GameEntityController : "monitors events"
CalculatePatternBase_T o-- "1" GameParameter : "_targetParameter"
GameParameterReference_T ..> GameParameter

@enduml
